--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "@tiptap/vue-3": "^2.0.0-beta.209",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mitt": "^3.0.0",
     "vue": "^3.2.45"
   },
