--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue-blockful-editor",
   "private": false,
+  "license": "MIT",
   "version": "0.0.2",
   "type": "module",
   "files": [
