--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/vue-blockful-editor.umd.cjs",
-  "module": "./dist/vue-blockful-editor.js",
+  "module": "./dist/index.es.js",
+  "main": "./dist/index.cjs.cjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist//vue-blockful-editor.js",
-      "require": "./dist//vue-blockful-editor.umd.cjs"
-    }
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.cjs.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./style.css": "./dist/style.css"
   },
   "scripts": {
     "dev": "vite",
@@ -23,8 +26,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
-    "@tiptap/starter-kit": "^2.0.0-beta.209",
-    "@tiptap/vue-3": "^2.0.0-beta.209",
+    "@tiptap/starter-kit": "^2.0.0-beta.218",
+    "@tiptap/vue-3": "^2.0.0-beta.218",
     "mitt": "^3.0.0",
     "vue": "^3.2.45"
   },
@@ -38,6 +41,7 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-dts": "^2.0.2",
     "vue-tsc": "^1.0.11"
   }
 }
